[package]
name = "location-parser"
version = "0.1.0"
authors = ["That3Percent <that3percent@gmail.com>"]
edition = "2018"
description = "Parses latitude/longitude from strings in a wide variety of formats."
readme = "README.md"
categories = ["parser-implementations", "science"]
keywords = ["ISO-6709", "location", "parse"]
license = "MIT"

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
pest = "2.1.2"
pest_derive = "2.1.0"